docs/css/app.css
/* fonts */
@font-face {
    font-family:"Source Code Pro";
    src:url("../fonts/SourceCodePro.woff2") format("woff2");
    font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
}

@font-face {
    font-family:"Larke Neue";
    src:url("../fonts/LarkeNeueRegular.ttf") format("truetype");
    font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
}

@font-face {
    font-family:"Larke Neue";
    src:url("../fonts/LarkeNeueBold.ttf") format("truetype");
    font-display:auto;font-style:normal;font-weight:500;font-stretch:normal;
}    

*,
:after,
:before {
    box-sizing: border-box
}


/*! normalize.css v3.0.1 | MIT License | git.io/normalize */

html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%
}

body {
    margin: 0
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
    display: block
}

audio,
canvas,
progress,
video {
    display: inline-block;
    vertical-align: baseline
}

audio:not([controls]) {
    display: none;
    height: 0
}

[hidden],
template {
    display: none
}

a {
    background: transparent
}

a:active,
a:hover {
    outline: 0
}

abbr[title] {
    border-bottom: 1px dotted
}

b,
strong {
    font-weight: 700
}

h1 {
    margin: .67em 0
}

mark {
    background: #ff0;
    color: #000
}

small {
    font-size: 80%
}

sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}

sup {
    top: -.5em
}

sub {
    bottom: -.25em
}

img {
    border: 0
}

svg:not(:root) {
    overflow: hidden
}

figure {
    margin: 1em 40px
}

hr {
    border: 1px solid #ff2d20;
    margin-top: 2em;
    margin-left: -25px;
    margin-bottom: 2em;
    opacity: .6;
    box-sizing: content-box;
    height: 0
}

pre {
    overflow: auto
}

code,
kbd,
pre,
samp {
    font-family: monospace, monospace;
    font-size: 1em
}

button,
input,
optgroup,
select,
textarea {
    color: inherit;
    font: inherit;
    margin: 0
}

button {
    overflow: visible
}

button,
select {
    text-transform: none
}

button,
html input[type=button],
input[type=reset],
input[type=submit] {
    -webkit-appearance: button;
    cursor: pointer
}

button[disabled],
html input[disabled] {
    cursor: default
}

button::-moz-focus-inner,
input::-moz-focus-inner {
    border: 0;
    padding: 0
}

input {
    line-height: normal
}

input[type=checkbox],
input[type=radio] {
    box-sizing: border-box;
    padding: 0
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    height: auto
}

input[type=search] {
    -webkit-appearance: textfield;
    box-sizing: content-box
}

input[type=search]::-webkit-search-cancel-button,
input[type=search]::-webkit-search-decoration {
    -webkit-appearance: none
}

fieldset {
    border: 1px solid silver;
    margin: 0 2px;
    padding: .35em .625em .75em
}

legend {
    border: 0;
    padding: 0
}

textarea {
    overflow: auto
}

optgroup {
    font-weight: 700
}

table {
    border-collapse: collapse;
    border-spacing: 0
}

td,
th {
    padding: 0
}

html {
    font-size: 16px
}

body,
button,
input,
textarea {
    font-family: "Larke Neue", sans-serif;
    font-weight: 400;
    color: #090910;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}

blockquote,
h1,
h2,
h3,
h4,
h5,
h6,
ol,
p,
ul {
    margin-top: 0
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Larke Neue", sans-serif;
    font-weight: 500
}

h1 {
    font-size: 2em;
    font-weight: 500;
    letter-spacing: -1px
}

@media (min-width:48.75em) {
    h1 {
        font-size: 2.5em
    }
}

@media (min-width:60em) {
    h1 {
        font-size: 3em
    }
}

@media (min-width:82em) {
    h1 {
        font-size: 3.5em
    }
}

@media (min-width:95em) {
    h1 {
        font-size: 4em
    }
}

h2 {
    font-size: 1.75em;
    font-weight: 400;
    letter-spacing: -.5px
}

@media (min-width:48.75em) {
    h2 {
        font-size: 2.25em
    }
}

@media (min-width:60em) {
    h2 {
        font-size: 3em
    }
}

h3 {
    font-size: 1.25em;
    font-weight: 500;
    line-height: 1.25em;
    letter-spacing: -.33px
}

@media (min-width:55em) {
    h3 {
        font-size: 1.75em
    }
}

@media (min-width:70em) {
    h3 {
        font-size: 2em
    }
}

h4 {
    font-size: 1em;
    font-weight: 400;
    letter-spacing: -.25px
}

@media (min-width:55em) {
    h4 {
        font-size: 1.5em
    }
}

h5 {
    font-size: .95em;
    font-weight: 700;
    line-height: 1.666em;
    color: rgba(9, 9, 16, .7)
}

@media (min-width:35em) {
    h5 {
        font-size: 1.125em
    }
}

h6 {
    font-size: .875em;
    font-weight: 500;
    color: rgba(9, 9, 16, .5)
}

a {
    position: relative;
    text-decoration: none;
    -webkit-transition: all .3s ease;
    transition: all .3s ease
}

p {
    font-size: 1em;
    line-height: 1.666em;
    color: rgba(9, 9, 16, .7)
}

p strong {
    font-weight: 500
}

p.small {
    font-size: .75em;
    line-height: 1.714em
}

@media (min-width:55em) {
    p {
        font-size: 1.125em
    }
    p.small {
        font-size: .875em
    }
}

ol,
p,
ul {
    margin-bottom: 2em
}

ol a,
p a,
ul a {
    color: #ff2d20;
    text-decoration: underline
}

ol a:hover,
p a:hover,
ul a:hover {
    color: #ec0e00
}

blockquote p,
q p {
    quotes: "\201C" "\201D" "\2018" "\2019"
}

@media (max-width:40em) {
    blockquote {
        margin-left: 0;
        margin-right: 0
    }
}

span.small_text {
    color: rgba(9, 9, 16, .8)
}

label,
span.label,
span.small_text {
    display: block;
    font-size: .625em;
    line-height: 1.4em
}

label,
span.label {
    text-transform: uppercase;
    opacity: .4;
    margin-bottom: .875em;
    letter-spacing: 2.5px
}

code {
    font-size: .875em;
    font-family: "Source Code Pro", monospace;
    line-height: 1.714em;
    color: #090910
}

:not(pre)>code {
    background: #f5f5fa;
    color: #ca473f;
    padding: 0 .25em
}
/* ... */

